--- a/flights.conf
+++ b/flights.conf
@@ -149,11 +149,11 @@ filter {
 output {
     stdout { codec => rubydebug }	
 #	   elasticsearch { 
-#	  	hosts => "elasticsql.eastus2.cloudapp.azure.com:9200"
+#	  	hosts => ".eastus2.cloudapp.azure.com:9200"
 #	  	action => "index"
 #	  	index => "%{[@metadata][indexname]}"
 	 #	 user => "elastic"
-	 #	 password => "mike1018"
+	 #	 password => ""
 #	  	workers => 1 }
 }
 
